added vendor prefixes

--- a/index.html
+++ b/index.html
@@ -15,7 +15,55 @@
 
                 .fnt0 {
                     opacity:0;
+                    -moz-animation: text-opacity 1s linear forwards, glow 0.5s 10s infinite alternate;
+                    -o-animation: text-opacity 1s linear forwards, glow 0.5s 10s infinite alternate;
+                    -ms-animation: text-opacity 1s linear forwards, glow 0.5s 10s infinite alternate;
+                    -webkit-animation: text-opacity 1s linear forwards, glow 0.5s 10s infinite alternate;
                     animation: text-opacity 1s linear forwards, glow 0.5s 10s infinite alternate;
+                }
+
+                -moz-@keyframes glow {
+                    from {
+                        opacity:1;
+                    }
+
+                    to {
+                        opacity: 0.8;
+                    }
+
+                }
+
+                -o-@keyframes glow {
+                    from {
+                        opacity:1;
+                    }
+
+                    to {
+                        opacity: 0.8;
+                    }
+
+                }
+
+                -ms-@keyframes glow {
+                    from {
+                        opacity:1;
+                    }
+
+                    to {
+                        opacity: 0.8;
+                    }
+
+                }
+
+                -webkit-@keyframes glow {
+                    from {
+                        opacity:1;
+                    }
+
+                    to {
+                        opacity: 0.8;
+                    }
+
                 }
 
                 @keyframes glow {
@@ -38,131 +86,235 @@
 
                 .text2
                 {
+                    -moz-animation-delay:0.5s;
+                    -o-animation-delay:0.5s;
+                    -ms-animation-delay:0.5s;
+                    -webkit-animation-delay:0.5s;
                     animation-delay:0.5s;
                 }
 
                 .text3
                 {
+                    -moz-animation-delay:0.9s;
+                    -o-animation-delay:0.9s;
+                    -ms-animation-delay:0.9s;
+                    -webkit-animation-delay:0.9s;
                     animation-delay:0.9s;
                 }
 
                 .text4
                 {
+                    -moz-animation-delay:1.3s;
+                    -o-animation-delay:1.3s;
+                    -ms-animation-delay:1.3s;
+                    -webkit-animation-delay:1.3s;
                     animation-delay:1.3s;
                 }
 
                 .text5
                 {
+                    -moz-animation-delay:1.7s;
+                    -o-animation-delay:1.7s;
+                    -ms-animation-delay:1.7s;
+                    -webkit-animation-delay:1.7s;
                     animation-delay:1.7s;
                 }
 
                 .text6
                 {
+                    -moz-animation-delay:2.1s;
+                    -o-animation-delay:2.1s;
+                    -ms-animation-delay:2.1s;
+                    -webkit-animation-delay:2.1s;
                     animation-delay:2.1s;
                 }
 
                 .text7
                 {
+                    -moz-animation-delay:2.5s;
+                    -o-animation-delay:2.5s;
+                    -ms-animation-delay:2.5s;
+                    -webkit-animation-delay:2.5s;
                     animation-delay:2.5s;
                 }
 
                 .text8
                 {
+                    -moz-animation-delay:2.9s;
+                    -o-animation-delay:2.9s;
+                    -ms-animation-delay:2.9s;
+                    -webkit-animation-delay:2.9s;
                     animation-delay:2.9s;
                 }
 
                 .text9
                 {
+                    -moz-animation-delay:3.3s;
+                    -o-animation-delay:3.3s;
+                    -ms-animation-delay:3.3s;
+                    -webkit-animation-delay:3.3s;
                     animation-delay:3.3s;
                 }
 
                 .text10
                 {
+                    -moz-animation-delay:3.7s;
+                    -o-animation-delay:3.7s;
+                    -ms-animation-delay:3.7s;
+                    -webkit-animation-delay:3.7s;
                     animation-delay:3.7s;
                 }
 
                 .text11
                 {
+                    -moz-animation-delay:4.1s;
+                    -o-animation-delay:4.1s;
+                    -ms-animation-delay:4.1s;
+                    -webkit-animation-delay:4.1s;
                     animation-delay:4.1s;
                 }
 
                 .text12
                 {
+                    -moz-animation-delay:4.4s;
+                    -o-animation-delay:4.4s;
+                    -ms-animation-delay:4.4s;
+                    -webkit-animation-delay:4.4s;
                     animation-delay:4.4s;
                 }
 
                 .text13
                 {
+                    -moz-animation-delay:4.8s;
+                    -o-animation-delay:4.8s;
+                    -ms-animation-delay:4.8s;
+                    -webkit-animation-delay:4.8s;
                     animation-delay:4.8s;
                 }
 
                 .text14
                 {
+                    -moz-animation-delay:5.2s;
+                    -o-animation-delay:5.2s;
+                    -ms-animation-delay:5.2s;
+                    -webkit-animation-delay:5.2s;
                     animation-delay:5.2s;
                 }
 
                 .text15
                 {
+                    -moz-animation-delay:5.6s;
+                    -o-animation-delay:5.6s;
+                    -ms-animation-delay:5.6s;
+                    -webkit-animation-delay:5.6s;
                     animation-delay:5.6s;
                 }
 
                 .text16
                 {
+                    -moz-animation-delay:6s;
+                    -o-animation-delay:6s;
+                    -ms-animation-delay:6s;
+                    -webkit-animation-delay:6s;
                     animation-delay:6s;
                 }
 
                 .text17
                 {
+                    -moz-animation-delay:6.4s;
+                    -o-animation-delay:6.4s;
+                    -ms-animation-delay:6.4s;
+                    -webkit-animation-delay:6.4s;
                     animation-delay:6.4s;
                 }
 
                 .text18
                 {
+                    -moz-animation-delay:6.8s;
+                    -o-animation-delay:6.8s;
+                    -ms-animation-delay:6.8s;
+                    -webkit-animation-delay:6.8s;
                     animation-delay:6.8s;
                 }
 
                 .text19
                 {
+                    -moz-animation-delay:7.2s;
+                    -o-animation-delay:7.2s;
+                    -ms-animation-delay:7.2s;
+                    -webkit-animation-delay:7.2s;
                     animation-delay:7.2s;
                 }
 
                 .text20
                 {
+                    -moz-animation-delay:7.6s;
+                    -o-animation-delay:7.6s;
+                    -ms-animation-delay:7.6s;
+                    -webkit-animation-delay:7.6s;
                     animation-delay:7.6s;
                 }
 
                 .text21
                 {
+                    -moz-animation-delay:8s;
+                    -o-animation-delay:8s;
+                    -ms-animation-delay:8s;
+                    -webkit-animation-delay:8s;
                     animation-delay:8s;
                 }
 
                 .text22
                 {
+                    -moz-animation-delay:8.4s;
+                    -o-animation-delay:8.4s;
+                    -ms-animation-delay:8.4s;
+                    -webkit-animation-delay:8.4s;
                     animation-delay:8.4s;
                 }
 
                 .text23
                 {
+                    -moz-animation-delay:8.8s;
+                    -o-animation-delay:8.8s;
+                    -ms-animation-delay:8.8s;
+                    -webkit-animation-delay:8.8s;
                     animation-delay:8.8s;
                 }
 
                 .text24
                 {
+                    -moz-animation-delay:9.2s;
+                    -o-animation-delay:9.2s;;
+                    -ms-animation-delay:9.2s;
+                    -webkit-animation-delay:9.2s;
                     animation-delay:9.2s;
                 }
 
                 .text25
                 {
+                    -moz-animation-delay:9.6s;
+                    -o-animation-delay:9.6s;
+                    -ms-animation-delay:9.6s;
+                    -webkit-animation-delay:9.6s;
                     animation-delay:9.6s;
                 }
 
                 .text26
                 {
+                    -moz-animation-delay:10s;
+                    -o-animation-delay:10s;
+                    -ms-animation-delay:10s;
+                    -webkit-animation-delay:10s;
                     animation-delay:10s;
                 }
 
                 .text27
                 {
+                    -moz-animation-delay:10.4s;
+                    -o-animation-delay:10.4s;
+                    -ms-animation-delay:10.4s;
+                    -webkit-animation-delay:10.4s;
                     animation-delay:10.4s;
                 }
 
@@ -182,9 +334,47 @@
                   stroke-dasharray: 30000;
                     stroke-dashoffset: 30000;
                     stroke-linecap: round;
+
+                    -moz-animation: dash 5s linear, glow 0.5s 10s infinite alternate;
+                    -o-animation: dash 5s linear, glow 0.5s 10s infinite alternate;
+                    -ms-animation: dash 5s linear, glow 0.5s 10s infinite alternate;
+                    -webkit-animation: dash 5s linear, glow 0.5s 10s infinite alternate;
                   animation: dash 5s linear, glow 0.5s 10s infinite alternate;
+
+                    -moz-animation-fill-mode: forwards;
+                    -o-animation-fill-mode: forwards;
+                    -ms-animation-fill-mode: forwards;
+                    -webkit-animation-fill-mode: forwards;
                     animation-fill-mode: forwards;
                 }
+
+
+
+
+                -moz-@keyframes dash {
+                  to {
+                    stroke-dashoffset: 0;
+                  }
+                }
+
+                -ms-@keyframes dash {
+                  to {
+                    stroke-dashoffset: 0;
+                  }
+                }
+
+                -o-@keyframes dash {
+                  to {
+                    stroke-dashoffset: 0;
+                  }
+                }
+
+                -webkit-@keyframes dash {
+                  to {
+                    stroke-dashoffset: 0;
+                  }
+                }
+
 
                 @keyframes dash {
                   to {
@@ -192,48 +382,86 @@
                   }
                 }
 
+
+
                 .str-first {
                     stroke: url(#Gradient1);
+                    -moz-animation-delay: 0;
+                    -o-animation-delay: 0;
+                    -ms-animation-delay: 0;
+                    -webkit-animation-delay: 0;
                     animation-delay: 0;
                 }
 
                 .str-second {
                     stroke: url(#Gradient2);
+                    -moz-animation-delay: 1s;
+                    -o-animation-delay: 1s;
+                    -ms-animation-delay: 1s;
+                    -webkit-animation-delay: 1s;
                     animation-delay: 1s;
                 }
 
                 .str-third {
                     stroke: url(#Gradient3);
+                    -moz-animation-delay: 2s;
+                    -o-animation-delay: 2s;
+                    -ms-animation-delay: 2s;
+                    -webkit-animation-delay: 2s;
                     animation-delay: 2s;   
                 }
 
                 .str-fourth {
                     stroke: url(#Gradient4);
+                    -moz-animation-delay: 3s;
+                    -o-animation-delay: 3s;
+                    -ms-animation-delay: 3s;
+                    -webkit-animation-delay: 3s;
                     animation-delay: 3s;   
                 }
 
                 .str-fifth {
                     stroke: url(#Gradient5);
+                    -moz-animation-delay: 5s;
+                    -o-animation-delay: 5s;
+                    -ms-animation-delay: 5s;
+                    -webkit-animation-delay: 5s;
                     animation-delay: 5s;   
                 }
 
                 .str-sixth {
                     stroke: url(#Gradient6);
+                    -moz-animation-delay: 7s;
+                    -o-animation-delay: 7s;
+                    -ms-animation-delay: 7s;
+                    -webkit-animation-delay: 7s;
                     animation-delay: 7s;
                 }
 
                 .str-seventh {
                     stroke: url(#Gradient7);
+                    -moz-animation-delay: 8s;
+                    -o-animation-delay: 8s;
+                    -ms-animation-delay: 8s;
+                    -webkit-animation-delay: 8s;
                     animation-delay: 8s;   
                 }
 
                 .str-eight {
                     stroke: url(#Gradient8);
+                    -moz-animation-delay: 9s;
+                    -o-animation-delay: 9s;
+                    -ms-animation-delay: 9s;
+                    -webkit-animation-delay: 9s;
                     animation-delay: 9s;   
                 }
 
                 .str-ninth {
                     stroke: url(#Gradient9);
+                    -moz-animation-delay: 10s;
+                    -o-animation-delay: 10s;
+                    -ms-animation-delay: 10s;
+                    -webkit-animation-delay: 10s;
                     animation-delay: 10s;   
                 }
         </style>
